<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido_de_nuevo"
            android:textColor="@color/azul"
            android:textSize="27sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inicia_sesi_n"
            android:textColor="@color/azul"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">

            <EditText
                android:id="@+id/correoText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/cuadrado1"
                android:drawableEnd="@drawable/email32px"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="1dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/ingrese_su_correo"
                android:textColor="@color/azul"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp">

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/cuadrado1"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="1dp"
                android:paddingLeft="1dp"
                android:text="@string/contrase_a"
                android:textColor="@color/azul"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="28dp"
                android:src="@drawable/pass216px"/>
        </RelativeLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/iniciarSesionButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/azul"
            android:text="@string/iniciar_sesion"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="322dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ResgistrarButton"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            app:cornerRadius="322dp"
            android:backgroundTint="@color/azul"
            android:text="@string/registrarse"
            android:textStyle="bold"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>