<resources>
    <string name="app_name">GMapsActivity</string>
    <string name="resgistrate">Resgistrate</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="inicia_sesi_n">Inicia Sesión!</string>
    <string name="bienvenido_de_nuevo">Bienvenido de Nuevo,</string>
    <string name="registrate">Registrate</string>
    <string name="aqui">Aqui!</string>
    <string name="ingrese_su_corre">Ingrese su correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="resgistratte">Resgistrate</string>
    <string name="mapa_de_emergencias">Mapa de emergencias</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrarse2">Registrarse</string>
</resources>